--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "files": [
+            "app/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "app/Helpers/PhotoHelper.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
