--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.6",
+        "postcss": "^8.4.21",
+        "postcss-preset-env": "^8.3.0",
+        "sass": "^1.60.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "less": "^4.1.3"
     }
 }
