--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "less": "^4.1.3"
+        "less": "^4.1.3",
+        "vite-imagetools": "^4.0.18"
     }
 }
